--- a/src/PersonalPage/ProyectosBundle/Resources/translations/messages.en.xliff
+++ b/src/PersonalPage/ProyectosBundle/Resources/translations/messages.en.xliff
@@ -48,7 +48,7 @@
 			</trans-unit>
 			<trans-unit id="12">
 				<source>Principal</source>
-				<target>Main</target>
+				<target>Home</target>
 			</trans-unit>
 			<trans-unit id="13">
 				<source>Áreas de investigacion y enfoque de proyectos de desarrollo</source>
